Update 2-01. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/2-01. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/2-01. 프로그래밍 코드 최적화(02.19).md
@@ -333,7 +333,7 @@ define table ztscarr_c203 {                      " DB 테이블 생성
 </br>
 </br>
 
-#### 5) Eclipse(ADT)에서 테이블 Data Preview 실행
+#### 5) Eclipse(ADT)에서 테이블 Data Preview (F8) 실행
 - 마우스 우클릭
   
 <img width="569" height="218" alt="image" src="https://github.com/user-attachments/assets/27577e56-619f-4b7b-99ea-e95a2ac3b0d9" />
