Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -1,1 +1,45 @@
+## <  핵심 개념 >
+- **1) ABAP 타입 정의 위치별 차이와 Nested/Flat 구조 비교**
+- **2) Eclipse에서 Type 생성 절차**
+- **3) Eclipse에서 CDS View / View Entity 생성 절차**
+- **4) CDS View / View Entity 어노테이션 설정**
+- **5) CDS SAP GUI OData 서비스 생성 및 활성화 절차**
+</br>
+</br>
 
+---
+
+</br>
+
+## < Annotation Propagation >
+- 필드(Element) 애노테이션은 상위 View로 자동 전파되고, View Entity 애노테이션은 전파되지 않음
+  
+</br>
+- R_Employee (하위 View)
+```abap
+@AccessControl.authorizationCheck: #MANDATORY
+@EndUserText.label: 'Root Employee View'
+
+define view entity R_Employee
+  as select from zemployee
+{
+  key EmployeeID,
+      Name,
+      CurrencyCode,
+
+  @Semantics.amount.currencyCode: 'CurrencyCode'
+      AnnualSalary
+}
+```
+- C_Employee (상위 View)
+```abap
+@EndUserText.label: 'Consumption Employee View'
+
+define view entity C_Employee
+  as select from R_Employee
+{
+  key EmployeeID,
+      Name,
+      AnnualSalary
+}
+```
