Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -46,3 +46,6 @@ define view entity C_Employee
       AnnualSalary
 }
 ```
+</br>
+
+<img width="545" height="364" alt="image" src="https://github.com/user-attachments/assets/2ac26f2b-6c7b-4c69-8582-b19b3d63b06e" />
