Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -48,4 +48,17 @@ define view entity C_Employee
 ```
 </br>
 
+- 기존 CDS View(ZCDSFLIGHT_B03)를 참조해서 새로운 CDS View를 생성하는 화면
 <img width="481" height="321" alt="image" src="https://github.com/user-attachments/assets/f07b8aed-5a99-4b47-825c-6fc46fbdc8a5" />
+</br>
+</br>
+
+- CDS View에서 현재 적용된 Annotation을 확인하기 위해 “Open With → Active Annotations”를 여는 메뉴
+<img width="611" height="252" alt="image" src="https://github.com/user-attachments/assets/b822fc3b-2292-4481-b4f3-c287314841fa" />
+</br>
+</br>
+
+- 해당 CDS View에 실제로 적용·전파된 Annotation 목록을 보여주는 확인 화면
+<img width="689" height="349" alt="image" src="https://github.com/user-attachments/assets/d458b047-4524-4156-911d-4e02c99bd134" />
+</br>
+</br>
