Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -62,3 +62,45 @@ define view entity C_Employee
 <img width="689" height="349" alt="image" src="https://github.com/user-attachments/assets/d458b047-4524-4156-911d-4e02c99bd134" />
 </br>
 </br>
+
+- ZCDSFLIGHT_B03 (하위 View)
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Flight CDS View'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSFLIGHT_B03 as select from sflight
+{
+    key carrid as Carrid,
+    key connid as Connid,
+    key fldate as Fldate,
+    
+    @Semantics.amount.currencyCode: 'Currency'
+    price as Price,
+    currency as Currency,
+    planetype as Planetype,
+    seatsmax as Seatsmax,
+    seatsocc as Seatsocc,
+    @Semantics.amount.currencyCode: 'Currency'
+    paymentsum as Paymentsum
+}
+```
+- ZCDSFLIGHT_PROPA_B03 (상위 View)
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Flight CDS Propagated'
+@Metadata.ignorePropagatedAnnotations: false
+define view entity ZCDSFLIGHT_PROPA_B03 as select from ZCDSFLIGHT_B03
+{
+    key Carrid,
+    key Connid,
+    key Fldate,
+    Price,
+    Currency,
+    Planetype,
+    Seatsmax,
+    Seatsocc,
+    Paymentsum
+}
+```
