Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -13,7 +13,7 @@
 
 ## < Annotation Propagation >
 - 필드(Element) 애노테이션은 상위 View로 자동 전파되고, View Entity 애노테이션은 전파되지 않음
-- `@Metadata.ignorePropagatedAnnotations: true` : false는 하위 View의 필드 애노테이션을 그대로 전파하고, true는 그 전파를 무시함
+- `@Metadata.ignorePropagatedAnnotations: ` : false는 하위 View의 필드 애노테이션을 그대로 전파하고, true는 그 전파를 무시함
   
 </br>
 
