Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -106,3 +106,73 @@ define view entity ZCDSFLIGHT_PROPA_B03 as select from ZCDSFLIGHT_B03
     Paymentsum
 }
 ```
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+- Annotation Propagation 실습
+</br>
+
+<img width="474" height="297" alt="image" src="https://github.com/user-attachments/assets/4cc81c0b-2eac-449b-8cd6-7156687d1495" />
+</br>
+</br>
+
+- Z03_R_Employee (하위 View)
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Z03_R_Employee'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity Z03_R_Employee as select from z03employ
+{
+    key employee_id as EmployeeId,
+    first_name as FirstName,
+    last_name as LastName,
+    birth_date as BirthDate,
+    entry_date as EntryDate,
+    @Semantics.amount.currencyCode: 'CurrencyCode'
+    annual_salary         as AnnualSalary,
+    @EndUserText.label: 'Currency Key'
+    currency_code         as CurrencyCode,
+    created_by as CreatedBy,
+    created_at as CreatedAt,
+    local_last_changed_by as LocalLastChangedBy,
+    local_last_changed_at as LocalLastChangedAt,
+    last_changed_at as LastChangedAt
+}
+```
+- Z03_C_Employee (하위 View)
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Z03_C_Employee'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity Z03_C_Employee as select from Z03_R_Employee
+{
+    key EmployeeId,
+    FirstName,
+    LastName,
+    BirthDate,
+    EntryDate,
+    @Semantics.amount.currencyCode: 'CurrencyCode'
+    AnnualSalary,
+    CurrencyCode,
+    CreatedBy,
+    CreatedAt,
+    LocalLastChangedBy,
+    LocalLastChangedAt,
+    LastChangedAt
+}
+```
+</br>
+</br>
+</br>
+
+### 실습 2
