Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -176,3 +176,9 @@ define view entity Z03_C_Employee as select from Z03_R_Employee
 </br>
 
 ### 실습 2
+- View (구문법) CDS 생성 실습
+</br>
+
+<img width="356" height="204" alt="image" src="https://github.com/user-attachments/assets/3e2716d1-25e3-4c1e-be57-7aece1196181" />
+</br>
+</br>
