Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -182,3 +182,25 @@ define view entity Z03_C_Employee as select from Z03_R_Employee
 <img width="356" height="204" alt="image" src="https://github.com/user-attachments/assets/3e2716d1-25e3-4c1e-be57-7aece1196181" />
 </br>
 </br>
+</br>
+
+<img width="474" height="301" alt="image" src="https://github.com/user-attachments/assets/4b212780-8392-4da7-8d25-1e970c7ddf60" />
+</br>
+</br>
+
+```abap
+@AbapCatalog.sqlViewName: 'ZCDSEMP_B03_S'
+@AbapCatalog.compiler.compareFilter: true
+@AbapCatalog.preserveKey: true
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'CDS Employ Info'
+@Metadata.ignorePropagatedAnnotations: true
+define view ZCDSEMPINFO_B03 as select from ztempinfo_b03
+{
+  key empno as EmployNo,
+  key projod as ProjectID,
+  assigndate as AssignDate,
+  role as Role,
+  memo as Memo
+}
+```
