--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -1,9 +1,5 @@
 ## <  핵심 개념 >
-- **1) ABAP 타입 정의 위치별 차이와 Nested/Flat 구조 비교**
-- **2) Eclipse에서 Type 생성 절차**
-- **3) Eclipse에서 CDS View / View Entity 생성 절차**
-- **4) CDS View / View Entity 어노테이션 설정**
-- **5) CDS SAP GUI OData 서비스 생성 및 활성화 절차**
+- **1) Annotation Propagation (필드 참조 + 애노테이션 전파)**
 </br>
 </br>
 
@@ -11,7 +7,7 @@
 
 </br>
 
-## < Annotation Propagation >
+## < Annotation Propagation (필드 참조 + 애노테이션 전파) >
 - 필드(Element) 애노테이션은 상위 View로 자동 전파되고, View Entity 애노테이션은 전파되지 않음
 - `@Metadata.ignorePropagatedAnnotations: ` : false는 하위 View의 필드 애노테이션을 그대로 전파하고, true는 그 전파를 무시함
 - 상위 View에서는 이미 하위 View에서 정의된 별칭(Carrid, Price 등)을 그대로 필드명으로 사용하기 때문에 다시 as를 쓸 필요가 없음
