Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -105,6 +105,27 @@ define view entity ZCDSFLIGHT_PROPA_B03 as select from ZCDSFLIGHT_B03
 </br>
 </br>
 
+## < ABAP Dictionary에서 Foreign Key 설정 문법 >
+- `0..*` = Check Table 1건에 대해 여러 Foreign Key Table 건이 연결 가능
+- `1` = Foreign Key Table 1건은 반드시 Check Table 1건을 참조함
+```abap
+with foreign key [0..*, 1]
+```
+```abap
+define table employee {
+
+  key client       : abap.clnt not null;      // 클라이언트 (PK)
+  key employee_id  : employee_id not null;   // 직원 ID (PK)
+
+  department_id : department_id              // Check Field (외래키 필드)
+    with foreign key department              // Check Table = DEPARTMENT
+      where client = employee.client         // Check Table PK의 client 매핑
+        and id     = employee.department_id; // Check Table PK의 id 매핑
+}
+```
+</br>
+</br>
+
 ---
 
 </br>
