Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -106,9 +106,13 @@ define view entity ZCDSFLIGHT_PROPA_B03 as select from ZCDSFLIGHT_B03
 </br>
 
 ## < ABAP Dictionary에서 Foreign Key 설정 문법 >
-- `0..*` = Check Table 1건에 대해 여러 Foreign Key Table 건이 연결 가능
-- `1` = Foreign Key Table 1건은 반드시 Check Table 1건을 참조함
+
+- `[1,1]` → Source 1건은 Target 1건과 매핑 (일대일)
+- `[0..1,1]` → Source 1건당 Target이 없거나 1건
+- `[1..*,1]` → 여러 Source가 Target 1건을 참조 (다대일)
+- `[0..*,1]` → 여러 Source가 Target 1건을 참조 가능
 ```abap
+[ForeignKey Table(Source), Check Table(Target)]
 with foreign key [0..*, 1]
 ```
 ```abap
