Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -130,6 +130,56 @@ define table employee {
 </br>
 </br>
 
+## < CDS Association >
+- CDS View와 다른 CDS View를 연결해두는 관계 정의 문법 (필요할 때 자동으로 조인되도록 예약)
+- `$projection` : 현재 CDS Entity의 필드를 참조
+- Association임을 구분하기 위해 관례적으로 이름 앞에 _를 붙임
+```abap
+define view entity R_Employee
+  as select from employee
+
+  association to R_Department as _Department
+    on $projection.DepartmentId = _Department.Id
+
+{
+  key employee_id as EmployeeId,
+      first_name  as FirstName,
+      last_name   as LastName,
+      department_id as DepartmentId
+}
+```
+- Association의 `[min..max]` 는 Source 1건 기준으로 Target이 몇 건 연결되는지를 나타냄
+```abap
+association [min..max] to TargetView as _Assoc
+```
+</br>
+</br>
+
+## < Syntax Warning – Association Cardinality 불일치 >
+- ON 조건이 Target의 Primary Key를 완전히 지정하므로 실제로는 최대 1건만 연결될 수 있음
+- 그런데 Cardinality를 `[0..*]` 로 선언해 여러 건 가능하다고 해서 논리적으로 맞지 않아 경고가 발생함
+```abap
+define view entity R_Employee
+  as select from employee
+
+  association [0..*] to R_Department as _Department
+    on $projection.DepartmentId = _Department.Id
+{
+  key employee_id  as EmployeeId,
+      department_id as DepartmentId
+}
+```
+```abap
+define view entity R_Department
+  as select from department
+{
+  key id as Id,
+      department_designation as DepartmentDesignation
+}
+```
+</br>
+</br>
+
 ---
 
 </br>
