Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -156,8 +156,8 @@ association [min..max] to TargetView as _Assoc
 </br>
 
 ## < Syntax Warning – Association Cardinality 불일치 >
-- ON 조건이 Target의 Primary Key를 완전히 지정하므로 실제로는 최대 1건만 연결될 수 있음
-- 그런데 Cardinality를 `[0..*]` 로 선언해 여러 건 가능하다고 해서 논리적으로 맞지 않아 경고가 발생함
+- ON 조건이 Target의 Primary Key를 완전히 지정하므로 최대 1건만 가능
+- 따라서 Cardinality는 `[0..1]` 또는 `[1..1]` 로 선언해야 올바름
 ```abap
 define view entity R_Employee
   as select from employee
