Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -158,6 +158,7 @@ association [min..max] to TargetView as _Assoc
 ## < Syntax Warning – Association Cardinality 불일치 >
 - ON 조건이 Target의 Primary Key를 완전히 지정하므로 최대 1건만 가능
 - 따라서 Cardinality는 `[0..1]` 또는 `[1..1]` 로 선언해야 올바름
+- Association Cardinality 종류 : [0..1], [1..1], [0..*], [1..*]
 ```abap
 define view entity R_Employee
   as select from employee
