--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -158,7 +158,6 @@ association [min..max] to TargetView as _Assoc
 ## < Syntax Warning – Association Cardinality 불일치 >
 - ON 조건이 Target의 Primary Key를 완전히 지정하므로 최대 1건만 가능
 - 따라서 Cardinality는 `[0..1]` 또는 `[1..1]` 로 선언해야 올바름
-- Association Cardinality 종류 : [0..1], [1..1], [0..*], [1..*]
 ```abap
 define view entity R_Employee
   as select from employee
@@ -176,6 +175,38 @@ define view entity R_Department
 {
   key id as Id,
       department_designation as DepartmentDesignation
+}
+```
+- Association Cardinality는 Target 쪽 PK 기준으로 판단
+- Association Cardinality 종류 : [0..1], [1..1], [0..*], [1..*]
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Cds View spfli'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSSPFLI_B03 as select from spfli as sf
+    // association 생략 시 기본값은 [0..1]
+    association[1..1] to ZCDSSCARR2_B03 as _Carrier  // [0..1] 또는 [1..1] 이어야 함
+    // on $projection.Carr_id = _Carrier.Carrid
+    on sf.carrid = _Carrier.Carrid
+{
+    key carrid as Carr_id,
+    key connid as Connid,
+    countryfr as Countryfr,
+    cityfrom as Cityfrom,
+    airpfrom as Airpfrom,
+    countryto as Countryto,
+    cityto as Cityto,
+    airpto as Airpto,
+    fltime as Fltime,
+    deptime as Deptime,
+    arrtime as Arrtime,
+    @Semantics.quantity.unitOfMeasure: 'Distid'
+    distance as Distance,
+    distid as Distid,
+    fltype as Fltype,
+    period as Period,
+    _Carrier       
 }
 ```
 </br>
