Update 2-03. 프로그래밍 코드 최적화(02.23).md

--- a/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
+++ b/RAP/2-03. 프로그래밍 코드 최적화(02.23).md
@@ -104,6 +104,8 @@ define view entity ZCDSFLIGHT_PROPA_B03 as select from ZCDSFLIGHT_B03
 ```
 </br>
 </br>
+</br>
+</br>
 
 ## < ABAP Dictionary에서 Foreign Key 설정 문법 >
 
@@ -127,6 +129,8 @@ define table employee {
         and id     = employee.department_id; // Check Table PK의 id 매핑
 }
 ```
+</br>
+</br>
 </br>
 </br>
 
@@ -154,6 +158,8 @@ association [min..max] to TargetView as _Assoc
 ```
 </br>
 </br>
+</br>
+</br>
 
 ## < Syntax Warning – Association Cardinality 불일치 >
 - ON 조건이 Target의 Primary Key를 완전히 지정하므로 최대 1건만 가능
@@ -177,6 +183,8 @@ define view entity R_Department
       department_designation as DepartmentDesignation
 }
 ```
+</br>
+
 - Association Cardinality는 Target 쪽 PK 기준으로 판단
 - Association Cardinality 종류 : [0..1], [1..1], [0..*], [1..*]
 ```abap
@@ -209,6 +217,13 @@ define view entity ZCDSSPFLI_B03 as select from spfli as sf
     _Carrier       
 }
 ```
+<img width="536" height="315" alt="image" src="https://github.com/user-attachments/assets/de5cb776-7322-42c3-b277-47b0f87768fe" />
+</br>
+
+<img width="285" height="174" alt="image" src="https://github.com/user-attachments/assets/d8b639b2-b26c-4946-b5d7-9c0f8428ca16" />
+</br>
+</br>
+</br>
 </br>
 </br>
 
